# testing

./: .travis.yml  CMakeLists.txt  Jenkinsfile  main.cpp
cmake/: clang-cxx-dev-tools.cmake  clang-format.cmake  clang-tidy-check.cmake  clang.cmake  cppcheck.cmake  gcc.cmake  legato.cmake  makefullfilenames.cmake
package-scripts/: adefTemplate.sh  bundle.sh  config.sh  controlTemplate.sh  package.sh
